--- a/libcrails-odb/id_type.hpp.in
+++ b/libcrails-odb/id_type.hpp.in
@@ -4,9 +4,12 @@
 # define ODB_ID_TYPE $config.libcrails_odb.id_type$
 # define ODB_NULL_ID $config.libcrails_odb.null_id$
 
-namespace ODB
+namespace Crails
 {
-  typedef ODB_ID_TYPE id_type;
+  namespace Odb
+  {
+    typedef ODB_ID_TYPE id_type;
+  }
 }
 
 #endif
